--- a/bm_sbus_cmd/StyleDictionary.xaml
+++ b/bm_sbus_cmd/StyleDictionary.xaml
@@ -20,4 +20,9 @@
         <Setter Property="Content" Value="Sync"/>
         <Setter Property="Margin" Value="3"/>
     </Style>
+    <Style x:Key="ValueCheckBoxStyle" TargetType="CheckBox">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Content" Value="On"/>
+        <Setter Property="Margin" Value="3"/>
+    </Style>
 </ResourceDictionary>
