--- a/bm_sbus_cmd/MainWindow.xaml
+++ b/bm_sbus_cmd/MainWindow.xaml
@@ -27,13 +27,13 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <RadioButton Content="Camera 1" Style="{DynamicResource CameraRadioButtonStyle}" IsChecked="True"/>
-                <RadioButton Content="Camera 2" Style="{DynamicResource CameraRadioButtonStyle}"/>
-                <RadioButton Content="Camera 3" Style="{DynamicResource CameraRadioButtonStyle}"/>
-                <RadioButton Content="Camera 4" Style="{DynamicResource CameraRadioButtonStyle}"/>
+                <RadioButton Name="radCam1" Content="Camera 1" Style="{DynamicResource CameraRadioButtonStyle}" IsChecked="True"/>
+                <RadioButton Name="radCam2" Content="Camera 2" Style="{DynamicResource CameraRadioButtonStyle}"/>
+                <RadioButton Name="radCam3" Content="Camera 3" Style="{DynamicResource CameraRadioButtonStyle}"/>
+                <RadioButton Name="radCam4" Content="Camera 4" Style="{DynamicResource CameraRadioButtonStyle}"/>
             </StackPanel>
             <CheckBox Grid.Column="1" Content="Realtime" VerticalAlignment="Center" Margin="0,0,3,0"/>
-            <Button Grid.Column="2" Content="Update" Margin="0,0,6,0"/>
+            <Button Grid.Column="2" Content="Update" Margin="0,0,6,0" Click="Button_Click_Update"/>
             <ComboBox Grid.Column="3" Name="cmbPorts" VerticalAlignment="Top" HorizontalAlignment="Right" Width="70" DropDownOpened="cmbPorts_DropDownOpened" SelectionChanged="cmbPorts_SelectionChanged"/>
             <Button Grid.Column="4" Content="Disconnect" Click="Button_Click_Disconnect"/>
         </Grid>
